--- a/index.html
+++ b/index.html
@@ -10,17 +10,25 @@
 </head>
 <body>
 	<h1 class="nameMain">Pixel Art Maker</h1>
-	<h2 class="nameChoose">Choose size</h2>
-	<form id="sizePicker">
-		Select height:
-		<input type="number" name="height" id="input_height" min="1" value="1">
-		Select width:
-		<input type="number" name="width" id="input_width" min= "1" value="1">
-		<input type="submit" id="input_submit">
-	</form>
-	<h2 class="nameChoose">Choose color</h2>
-	<input type="color" name="color" id="colorPicker">
+	<div class="mainTool">
+		<div class="tool">						
+			<form id="sizePicker">
+				<span class="labels">Size</span>
+				<label for="height">H:</label>
+				<input class="sizeVal" type="number" name="height" id="input_height" step="10" min="10" max="100" value="10">
+				<label for="width">W:</label>
+				<input class="sizeVal" type="number" name="width" id="input_width" step="10" min="10" max="150" value="10">
+				<input class="sizeVal" type="submit" id="input_submit">
+			</form>
+		</div>	
+		<div class="tool">
+			<label for="colorPicker">Color:</label>
+			<input type="color" name="color" id="colorPicker">
+		</div>
 
-	<table id="pixel_canvas"></table>
+	</div>
+	<div class="frameCanvas">
+	<table id="pixelCanvas"></table>
+	</div>
 </body>
 </html>
