--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 			<div class="tool">						
 				<form id="sizePicker">
 					<span class="labels">Size</span>
-					<label for="height">H:</label>
+					<label class="labels" for="height">H:</label>
 					<input class="sizeVal" type="number" name="height" id="input_height" step="10" min="10" max="100" value="10">
-					<label for="width">W:</label>
+					<label class="labels" for="width">W:</label>
 					<input class="sizeVal" type="number" name="width" id="input_width" step="10" min="10" max="150" value="10">
 					<input class="sizeVal" type="submit" id="input_submit" value="New">
 				</form>
 			</div>	
 			<div class="tool">
-				<label for="colorPicker">Color:</label>
+				<label class="labels" for="colorPicker">Color:</label>
 				<input type="color" name="color" id="colorPicker">
 			</div>
 		</div>
