clean and comment code

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 			<table id="pixelCanvas"></table>
 		</div>
 	</div>
-	<span id="author">by Dieter Jackson</span>
+	<p class="foot">Instruction (Left click : Paint)  / (Right click : Erase)</p>
+	<p class="foot">by Dieter Jackson</p>
 </body>
 </html>
